logs/pub_sub2/build.make.086.log.stderr
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:34:15: error: too few arguments to function ‘void positionT(const Pose&)’
     positionT();
               ^
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:9:6: note: declared here
 void positionT(const turtlesim::Pose& k){
      ^
make[2]: *** [CMakeFiles/pubvel_smart.dir/src/pubvel_smart.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_smart.dir/all] Error 2
make: *** [all] Error 2
